# Prusa-Firmware-Buddy

./: .clang-format  .clangd  .cmake-format.py  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE.md  ProjectOptions.cmake  README.md  paths.sh  protocol.txt  pyproject.toml  requirements.txt  sdkconfig  setup.sh  test.c  version.txt  vsconf.code-workspace
lib/: AddCTHash.cmake  AddCppStdExtensions.cmake  AddCrashCatcher.cmake  AddFrozen-json.cmake  AddHeatshrink.cmake  AddInih.cmake  AddJsmn.cmake  AddLibbgcode.cmake  AddLiblightmodbus.cmake  AddLwESP.cmake  AddMMU2.cmake  AddMagicEnum.cmake  AddMarlin.cmake  AddPrintf.cmake  AddPrusaErrorCodes.cmake  AddSFLLibrary.cmake  AddSG14.cmake  AddSegger.cmake  AddTMCStepper.cmake  AddTinyusb.cmake  CMakeLists.txt
lib/Arduino_Core_A3ides/: CMakeLists.txt
lib/Arduino_Core_Buddy/: CMakeLists.txt
lib/CRC/: CMakeLists.txt  tm_stm32f4_crc.c  tm_stm32f4_crc.h
lib/Catch2/: .gitrepo
lib/CrashCatcher/: .gitignore  .gitmodules  .gitrepo  README.creole  makefile
lib/CycloneTCP/: .gitrepo  README.md
lib/Drivers/: AddLIS2DH12.cmake  AddStm32f4Hal.cmake  AddStm32g0Hal.cmake  AddStm32h5Hal.cmake  CMakeLists.txt
lib/ESP/: CMakeLists.txt
lib/LiquidCrystal_I2C/: CMakeLists.txt  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h
lib/Marlin/: .gitignore  .gitrepo
lib/Middlewares/: CMakeLists.txt
lib/Prusa-Error-Codes/: .gitignore  .gitlab-ci.yml  .gitrepo  MANIFEST.in  README.md  generate_buddy_headers.py  remote_install.sh  setup.py
lib/Prusa-Firmware-MMU/: .clang-format  .gitrepo  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  version.cmake
lib/QR/: CMakeLists.txt  qrcodegen.c  qrcodegen.h  qrcodegen_utils.h
lib/SG14/: README  inplace_function.hpp
lib/SSL/: CMakeLists.txt
lib/Segger/: README.md  SEGGER.h  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Int.h
lib/TMCStepper/: .gitrepo  README.md  library.json  library.properties
lib/WUI/: CMakeLists.txt  README.md  alsockets.c  alsockets.h  alsockets_priv.h  buddy_socket.c  buddy_socket.h  esp_flash.cpp  esp_flash.hpp  espif.cpp  espif.h  ethernetif.c  ethernetif.cpp  ethernetif.h  http_handler_default.c  http_handler_default.h  http_lifetime.c  http_lifetime.cpp  http_lifetime.h  json_encode.c  lan_interface.c  lan_interface.h  lwip.c  lwip.h  lwipopts.h  netdev.c  netdev.h  netif_settings.c  netif_settings.h  pbuf_rx.c  pbuf_rx.cpp  pbuf_rx.h  progress_data_wrapper.cpp  progress_data_wrapper.h  random.cpp  random.h  uart_socket.c  uart_socket.h  wui.c  wui.cpp  (+12 more)
lib/cpp-std-extensions/: .gitignore  .gitrepo  CMakeLists.txt  CONTRIBUTING.md  README.md
lib/cthash/: .tm_properties  CMakeLists.txt  README.md  checksum.cpp  example.cpp
lib/esp32-nic/: CMakeLists.txt  paths.sh  setup.sh
lib/esp8266-nic/: .gitmodules  CMakeLists.txt  Dockerfile  README.md  activate.sh  paths.sh  protocol.txt  sdkconfig
lib/heatshrink/: .gitrepo
lib/inih/: .gitrepo  ini.c  ini.h
lib/jsmn/: .gitrepo
lib/libbgcode/: .gitignore  .gitrepo  CMakeLists.txt  README.md
lib/liblightmodbus/: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitrepo  README.md  lightmodbusConfig.cmake
lib/libsysbase/: CMakeLists.txt  Makefile.in  _exit.c  abort.c  acconfig.h  build_argv.c  chdir.c  chmod.c  clocks.c  config.h  config.h.in  configure  configure.in  dirent.c  environ.c  execve.c  fchmod.c  flock.c  fork.c  fstat.c  fsync.c  ftruncate.c  getpid.c  getreent.c  gettod.c  handle_manager.c  iosupport.c  isatty.c  kill.c  link.c  lseek.c  lstat.c  malloc_vars.c  mkdir.c  nanosleep.c  open.c  path.c  path.h  read.c  rename.c  (+13 more)
lib/lwesp/: .gitignore  .gitrepo
lib/magic_enum/: .gitrepo
lib/printf/: .gitrepo  printf.c  printf.h
lib/sfl-library/: .gitignore  .gitrepo  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
lib/tinyusb/: .gitrepo
src/: CMakeLists.txt  STM32F407VG_FLASH.ld  STM32F407VG_FLASH_boot.ld  STM32F429VI_FLASH.ld  STM32F429VI_FLASH_boot.ld  STM32F42x_FLASH.ld  ethernetif.c  fatfs.c  filesystem.c  filesystem.h  filesystem_fatfs.c  filesystem_fatfs.h  filesystem_littlefs.c  filesystem_littlefs_bbf.cpp  filesystem_root.c  freertos.c  freertos.cpp  freertos_openocd.c  freertos_openocd.cpp  fs_custom.c  guimain.c  libsysbase_syscalls.c  libsysbase_syscalls.h  littlefs.c  littlefs_bbf.cpp  littlefs_internal.c  logging.c  lwip.c  main.c  main.cpp  main_MINI.c  main_MINI.cpp  peripherals.cpp  stm32f4xx_hal_can.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c  system_stm32f4xx_boot.c  (+8 more)
src/Connect/: CMakeLists.txt  buffer.hpp  command.cpp  command.hpp  connect.cpp  connect.hpp  connect_error.h  connection.hpp  core_interface.cpp  core_interface.hpp  debug.h  httpc.cpp  httpc.hpp  httpc_data.cpp  httpc_data.hpp  marlin_printer.cpp  marlin_printer.hpp  os_porting.cpp  os_porting.hpp  planner.cpp  planner.hpp  printer.cpp  printer.hpp  render.cpp  render.hpp  resp_parser.cpp  resp_parser.h  run.cpp  socket.cpp  socket.hpp
src/bootloader/: CMakeLists.txt  bootloader.cpp  bootloader_update.cpp
src/buddy/: CMakeLists.txt  door_sensor.cpp  door_sensor.hpp  esp_flash_task.cpp  esp_flash_task.hpp  esp_flash_task_trivial.cpp  fatfs.c  fatfs.cpp  filesystem.c  filesystem.cpp  filesystem_fatfs.c  filesystem_fatfs.cpp  filesystem_littlefs.c  filesystem_littlefs.cpp  lwip.c  (+27 more)
src/buddy-esp-serial-flasher/: CMakeLists.txt  buddy_port.cpp  buddy_port.hpp  esp_flash.cpp  esp_flash.hpp
utils/: CMakeLists.txt  backup_elf.py  bin2cc.py  bootstrap.py  build.py  check-requirements.py  crash_dump_debug.py  crash_dump_info.py  dfu.py  font.py  gen-437.py  gen_esp_parts.py  gen_puppies_descriptor.py  generate-error-codes-report.py  id.cpp  lang.py  mklittlefs.py  mmu_ihex_cleanup.py  openocd_flash.sh  openocd_swo.sh  pack_fw.py  png2cc.py  png_packer.py  puppytool.py  qoi_packer.py  res.cpp  rm_old_jenkins_jobs.py  unpack_bbf.py  wui.py
(+8056 files in other folders)
